# balladeer

./: .readthedocs.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  setup.py
balladeer/: __init__.py  cartography.py  drama.py  folio.py  gesture.py  speech.py  story.py  types.py
balladeer/classic/: __init__.py  cartography.py  drama.py  folio.py  gesture.py  speech.py  story.py  types.py
balladeer/doc/: changes.rst  conf.py  conversation.rst  drama.rst  entity.rst  gv_to_inkscape.py  index.rst  interaction.rst  intro.rst  map.rst  pages.rst  scene.rst  screenshots.rst  speech.rst  story.rst  style.rst  themes.rst  types.rst  web.rst  world.rst
balladeer/lite/: app.py  assets.py  combat.dlg.toml  compass.py  director.py  drama.py  entity.py  homogeneous.py  loader.py  parser.py  performance.py  performer.py  presenter.py  resident.py  speech.py  speechmark.py  speechtables.py  spike.dlg.toml  stateful.py  story.py  storybuilder.py  storystager.py  types.py  world.py
balladeer/test/: test_cartography.py  test_drama.py  test_folio.py  test_gesture.py  test_speech.py
balladeer/utils/: assets.py  conversation.py  fruition.py  themes.py
docs/: .index.html.swp  balladeer-components.html  balladeer-in-brief.html  balladeer-over-the-web.html  easy-interactions.html  hello-world.html  ideas.html  index.html  its-your-turn.html  message-in-a-bottle.html  property-and-the-state.html  ready-to-serve.html  say-hello-wave-goodbye.html  tea-and-sympathy-0100.html  tea-and-sympathy-0110.html  tea-and-sympathy-0120.html  the-balladeer-backstory.html
(+170 files in other folders)
